--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "@prisma/client": "^4.11.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "nodemon": "^2.0.21",
-    "prisma": "^4.11.0"
+    "prisma": "^4.11.0",
+    "zod": "^3.21.4",
+    "zod-express-middleware": "^1.4.0"
   }
 }
