--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.0",
     "node-fetch": "^3.3.1",
@@ -13,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "nodemon": "^2.0.21",
