--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
     "dev": "nodemon",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "play": "ts-node encryption-messaround.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^18.15.0",
     "node-fetch": "^3.3.1",
     "ts-node": "^10.9.1",
@@ -15,6 +17,7 @@
     "@prisma/client": "^4.11.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^2.0.21",
     "prisma": "^4.11.0",
     "zod": "^3.21.4",
